style.css
html,
body {
  width: 100%;
  /* overflow-x: hidden; */
}

* {
  margin: 0;
  box-sizing: border-box;
}

:root {
  --bg-grey: rgb(35 35 35);
}

/* ---------------FONTS--------------- */

@font-face {
  font-family: "Apfel Grotezk Brukt";
  src: url(fonts/ApfelGrotezk-Brukt.otf);
}

@font-face {
  font-family: "Apfel Grotezk";
  font-weight: 200;
  src: url(fonts/ApfelGrotezk-Regular.otf);
}

@font-face {
  font-family: "Apfel Grotezk";
  font-weight: 400;
  src: url(fonts/ApfelGrotezk-Mittel.otf);
}

@font-face {
  font-family: "Apfel Grotezk";
  font-weight: 600;
  src: url(fonts/ApfelGrotezk-Fett.otf);
}

@font-face {
  font-family: "Apfel Grotezk";
  font-weight: 800;
  src: url(fonts/ApfelGrotezk-Satt.otf);
}

@font-face {
  font-family: "MAZIUS REVIEW 20.09 Ex italic";
  src: url(fonts/MAZIUSREVIEW20.09-Extraitalic.otf);
}

/* ----------------------------------- */

/* -------------- DESKTOP ------------ */

/* @media screen and (max-width:2000px) and (min-width:451px;) { }*/

.wrapper {
  margin: 0;
  padding: 0;
  /* height: auto; */
  height: 100vh;
  width: auto;
  background: var(--bg-grey);
}

.body-wrapper {
  margin: 0;
  padding: 0;
  height: auto;
  width: auto;
  overflow-x: hidden;
  background: var(--bg-grey);
}

.header {
  top: 0;
  left: 0;
  height: auto;
  width: auto;
  position: sticky;
  display: flow-root;
  background-color: var(--bg-grey);
  padding: 1vw;
  z-index: 100;
}

button {
}

.header-link {
  font-family: "Apfel Grotezk", sans-serif;
  font-weight: 200;
  font-size: 1.1vw;
  text-transform: uppercase;
  color: whitesmoke;
  background: none;
  border: none;
}

/* proj-tag is for project disciplines/areas */
.proj-tag {
  font-size: 1vw;
  font-weight: 200;
  text-transform: uppercase;
  padding-left: 0.6vw;
  padding-right: 0.6vw;
  padding-top: 0.2vw;
  padding-bottom: 0.2vw;
  margin-left: 0.3vw;
  margin-right: 0.3vw;
  background: var(--bg-grey);
  border-radius: 8rem;
}

/* meta-tag is for metadata info, like the date, the fact that its a collection of projects etc */
.meta-tag {
  font-size: 1vw;
  font-weight: 400;
  color: black;
  text-transform: uppercase;
  padding-left: 0.6vw;
  padding-right: 0.6vw;
  padding-top: 0.2vw;
  padding-bottom: 0.2vw;
  margin-left: 0.3vw;
  margin-right: 0.3vw;
  background: rgb(175, 175, 175);
  border-radius: 8rem;
}

#name {
  float: left;
  font-family: "Apfel Grotezk", sans-serif;
  text-transform: uppercase;
  font-weight: 200;
}
#projects,
#cv,
#about {
  float: right;
  padding-left: 2vw;
}

a {
  text-decoration: underline;
  color: inherit;
}

a.visited {
  text-decoration: underline;
  color: inherit;
}

iframe {
  display: block;
  /* position: absolute; */
}

.frame-wrapper {
  display: block;
  top: 0;
  left: 0;
  width: auto;
  height: 100vh;
}

#scroll {
  display: none;
}

#swipe {
  display: none;
}

.gallery {
  position: relative;
  display: block;
  margin: 0;
  padding: 0;
  height: auto;
  width: auto;
  /* background-color: yellowgreen; */
}

::-webkit-scrollbar {
  /* ---NOTE: for the rest of the scrollbar formatting to work, there has to be at least one attribute here under general scrollbar. */
  /* width: 2vh; */
  background-color: rgb(0, 0, 0);
  width: 8px;
  height: 8px;
}
/* ::-webkit-scrollbar-button {
} */
::-webkit-scrollbar-thumb {
  /* background: #F06449; */
  /* background: none; */
  background: rgb(175, 175, 175);
  border-radius: 50px;
  /* border: 1px solid whitesmoke; */
}
.image1::-webkit-scrollbar-track {
  background-image: linear-gradient(to right, rgb(24, 24, 24), rgb(24, 24, 24));
  border-radius: 50px;
}

.image-wrapper {
  margin: 0;
  padding: 0;
  height: auto;
  width: auto;
  /* transform: rotateX(180deg); */
}

.image1 {
  transform: rotateX(180deg);
  /* position: absolute; */
  /* width: 30vw; */
  height: auto;
  /* display: block; */
  display: flex;
  flex-direction: row;
  /* float: left; */
  overflow-x: scroll;
  overflow-y: hidden;
}

video {
  transform: rotateX(180deg);
  /* margin-right: 10px; */
  margin-top: 20px;
  margin-right: 20px;
  margin-bottom: 20px;
  align-self: center;
}

img {
  /* object-fit: cover; */
  object-fit: contain;
  height: 60vh;
  /* margin: 10px; */
  margin-top: 20px;
  margin-right: 20px;
  margin-bottom: 20px;
  transform: rotateX(180deg);
}

iframe {
  height: 60vh;
  object-fit: contain;
  margin: 10px;
  transform: rotateX(180deg);
}

h1 {
  font-weight: 400;
  font-family: "Apfel Grotezk", sans-serif;
  /* font-family: "MAZIUS REVIEW 20.09 Ex italic"; */
  /* font-weight: normal; */
  font-size: 1.5vw;
  line-height: 1.5vw;
  text-align: left;
  /* color: #F06449; */
  color: whitesmoke;
  display: inline-flex;
  align-items: center;
}

h2 {
  font-family: "Apfel Grotezk", sans-serif;
  font-weight: 200;
  font-size: 1.5vw;
  line-height: 1.5vw;
  float: right;
  color: whitesmoke;
  display: inline-flex;
  align-items: center;
}

.description {
  width: 95vw;
  display: flex;
  padding-bottom: 4vh;
}

p {
  width: 47vw;
  /* float:left; */
  font-family: "Apfel Grotezk", sans-serif;
  font-weight: 200;
  font-size: 1.2vw;
  line-height: 1.5vw;
  color: gainsboro;
  padding-left: 1vw;
  padding-right: 1vw;
  /* padding-top: 3vh; */
}

span {
  font-family: "Apfel Grotezk", sans-serif;
  color: #f06449;
}

.credits {
  font-family: "Apfel Grotezk", sans-serif;
  font-size: 1.2vw;
  color: darkgrey;
  text-align: center;
  padding-top: 3vh;
  padding-bottom: 3vh;
}

input[type="checkbox"] {
  display: none;
}

.wrap-collabsible {
  /* margin: 1.2rem 0;  */
  overflow-x: hidden;
}

.gradient {
  background-image: linear-gradient(
    -30deg,
    rgba(35, 35, 35, 0.25) 25%,
    rgb(35, 35, 35, 0.25) 75%
  );
  padding: 1rem;
  margin: 0;
  width: inherit;
  height: inherit;
  display: block;
  backdrop-filter: blur(30px);
  align-content: center;
  /* border-radius: 7px; */
  /* mix-blend-mode: multiply; */
}

.gradient:hover {
  backdrop-filter: none;
}
/* ... */

